# web_services

./: README.md  build.sh
ResearchPulse/: .env.example  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  debug_crawler.py  docker-compose.milvus.yml  index.html  main.py  nohup.out  prompt.md  prompt_1.md  pyproject.toml  requirements.txt  run.sh  settings.py
ResearchPulse/alembic/: env.py  script.py.mako
ResearchPulse/alembic/versions/: 20260217_1650_weibo001_add_weibo_hot_search_table.py
ResearchPulse/apps/: __init__.py
ResearchPulse/apps/action/: __init__.py  api.py  extractor.py  models.py  schemas.py  service.py
ResearchPulse/apps/admin/: __init__.py  api.py
ResearchPulse/apps/ai_processor/: __init__.py  api.py  article_translate.py  models.py  schemas.py  service.py
ResearchPulse/apps/aigc/: article_writer.py
ResearchPulse/apps/arxiv_crawler/: README.md  api.py  config.py  parser.py  tasks.py
ResearchPulse/apps/arxiv_ui/: README.md  __init__.py  api.py  config.py  tasks.py
ResearchPulse/apps/auth/: __init__.py  api.py  email_templates.py  schemas.py  service.py  verification_service.py
ResearchPulse/apps/crawler/: __init__.py  base.py  factory.py  registry.py  runner.py  translate_hook.py
ResearchPulse/apps/daily_report/: __init__.py  api.py  generator.py  service.py  tasks.py
ResearchPulse/apps/embedding/: __init__.py  api.py  milvus_client.py  models.py  schemas.py  service.py  similarity.py
ResearchPulse/apps/event/: __init__.py  api.py  clustering.py  models.py  schemas.py  service.py
ResearchPulse/apps/pipeline/: __init__.py  models.py  triggers.py  worker.py
ResearchPulse/apps/report/: __init__.py  api.py  generator.py  models.py  schemas.py  service.py
ResearchPulse/apps/rss_crawler/: api.py  config.py  database.py  models.py  parser.py  tasks.py
ResearchPulse/apps/rss_ui/: __init__.py  api.py  config.py
ResearchPulse/apps/scheduler/: __init__.py  tasks.py
ResearchPulse/apps/task_manager/: __init__.py  service.py
ResearchPulse/apps/topic/: __init__.py  api.py  discovery.py  models.py  radar.py  schemas.py  service.py
ResearchPulse/apps/ui/: __init__.py  api.py
ResearchPulse/apps/wechat_crawler/: __init__.py  api.py  config.py  database.py  models.py  parser.py  tasks.py
ResearchPulse/apps/wechat_ui/: __init__.py  api.py  config.py
ResearchPulse/common/: __init__.py  cache.py  config_loader.py  email.py  email_backup.py  email_templates.py  feature_config.py  http.py  logger.py  markdown.py  storage.py  utils.py
ResearchPulse/config/: __init__.py  defaults.yaml  logging.yaml
ResearchPulse/core/: __init__.py  cache.py  database.py  dependencies.py  security.py
ResearchPulse/core/models/: __init__.py  base.py  permission.py  user.py
ResearchPulse/docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT.md  admin_features_plan.md  admin_implementation_plan.md  conf.py  configuration.rst  deployment.rst  index.rst  installation.rst  weibo_integration_plan.md
ResearchPulse/docs/modules/: apps.rst  apps_action.rst  apps_admin.rst  apps_ai_processor.rst  apps_auth.rst  apps_crawler.rst  apps_embedding.rst  apps_event.rst  apps_report.rst  apps_scheduler.rst  apps_topic.rst  apps_ui.rst  common.rst  core.rst  scripts.rst  tests.rst  top_level.rst
ResearchPulse/scripts/: README.md  __init__.py  _ai_pipeline_runner.py  _crawl_runner.py  _email_runner.py  ai-pipeline.sh  clean_thinking_in_articles.py  control.sh  crawl.sh  deploy.sh  email.sh  init.sh  repair-arxiv.sh  repair_arxiv.py  reprocess_articles.py  service.sh  sync-categories.sh  sync_arxiv_categories.py  test.sh
ResearchPulse/sql/: __init__.py  add_new_sources.sql  create_db.sql  init.sql  migrate_2025.02.18.sql  migrate_source_type.sql
ResearchPulse/templates/email/: admin_report.html  base.html  user_digest.html
ResearchPulse/tests/: conftest.py  test_api.py  test_e2e.py  test_email.py  test_http.py  test_main.py  test_parser.py  test_settings.py  test_storage.py  test_tasks.py
ResearchPulse/tests/common/: __init__.py  test_email.py  test_email_templates.py  test_feature_config.py
ResearchPulse/tests/core/: test_dependencies.py  test_security.py
vllm_proxy/: README.md  (+1 more)
(+218 files in other folders)
